# circt

include/circt/Dialect/FIRRTL/: Dialect.h  OpStructure.td  Passes.td  Types.h
lib/Dialect/FIRRTL/: Dialect.cpp  LowerToRTL.cpp  LowerTypes.cpp  Ops.cpp  PassDetails.h  Types.cpp
lib/EmitVerilog/: EmitVerilog.cpp
test/e2e/: simple_addi.mlir
test/firrtl/: lower-types.mlir
tools/node-circt/: CMakeLists.txt  binding.gyp  node-circt.cpp  package.json
tools/node-circt/lib/: index.js
tools/node-circt/test/: basic.js
